# hello-world-cmake

./: CMakeLists.txt
include/: adder_library.h
src/: adder_library.cpp  hello.cpp
